@@ -1,0 +1,8 @@
+<header>Number of days to keep bandwidth data</header>
+
+By default, Virtualmin will not keep for graphing purposes bandwidth summary
+data more than 1 year old. However, you can extend this period by entering
+a different number of days in this field.<p>
+
+<footer>
+
